<resources>
    <string name="app_name">SpiderIndia Task</string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="appbar_add_data">Add Data</string>
    <string name="add_data_name">Name</string>
    <string name="add_data_class">class</string>
    <string name="add_data_section">Section</string>
    <string name="add_data_school_name">School Name</string>
    <string name="add_data_gender">Gender :</string>
    <string name="add_data_male">Male</string>
    <string name="add_data_female">Female</string>
    <string name="add_data_dob">DOB</string>
    <string name="add_data_ab">AB-</string>
    <string name="add_data_father_name">Father\'name</string>
    <string name="add_data_mother_s_name">Mother\'s Name</string>
    <string name="add_data_parent_contact_no">Parent Contact no</string>
    <string name="add_data_address1">Address1</string>
    <string name="add_data_address2">Address2</string>
    <string name="add_data_city">City</string>
    <string name="add_data_state">State</string>
    <string name="add_data_zip">Zip</string>
    <string name="add_data_emergency_contact_no">Emergency Contact no</string>
    <string name="add_data_select_location">Select Location</string>
    <string name="add_data_ganesh_nagar_rm_puram_nchennai">Ganesh nagar, RM puram\nChennai</string>
    <string name="map_add_data_select_location">Select location</string>
    <string name="add_data_submit">Submit</string>
    <string name="splash_screen_title">Spider India - Mobile App Development Company\nAndroid iOS Tablets\nSmartwatches and SmartTV Devices</string>
    <string name="login_screen_sign_in">SIGN IN</string>
    <string name="login_screen_user_name">User Name</string>
    <string name="login_screen_password">Password</string>
    <string name="login_screen_log_in">LOG IN</string>
    <string name="login_screen_don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_screen_signup">SignUp</string>
    <string name="sign_screen_sign_up">SIGN UP</string>
    <string name="sign_screen_user_name">User Name</string>
    <string name="sign_screen_phone_no">Phone no</string>
    <string name="sign_screen_password">Password</string>
    <string name="sign_screen_conform_password">Conform Password</string>
    <string name="sign_screen_sign_up_btn">SIGN UP</string>
    <string name="sign_screen_already_have_an_account">Already have an account?</string>
    <string name="sign_screen_signin">SignIn</string>
    <string name="select_map_select_location">Select Location</string>
    <string name="select_map_try_gas_stations_atm_s">Try Gas Stations, ATM\'s</string>
    <string name="select_map_add">add</string>
    <string name="intro_screen_student_napp">Student\nApp...</string>
    <string name="intro_screen_log_in">LOG IN</string>
    <string name="intro_screen_don_t_have_an_account">Don\'t have an account?</string>
    <string name="intro_screen_signup">SignUp</string>
    <string name="dash_board_welcome_to">Welcome to</string>
    <string name="dash_board__student_database_app">Student Database App</string>
    <string name="dash_board__add_nstudent">Add\nStudent</string>
    <string name="dash_board_view_nstudent">View\nStudent</string>
    <string name="dash_board_map_nstudent">Map\nStudent</string>
    <string name="dash_board_logout">logout</string>
    <string name="adapter_name">Santhosh</string>
    <string name="adapter_6th_std_a_k_g_school">6th Std - A / K.G School</string>
    <string name="student_detail_screen_name">Michael</string>
    <string name="student_detail_screen_school_name">11th School</string>
    <string name="student_detail_screen_gender">Gender</string>
    <string name="student_detail_screen_dob">DOB</string>
    <string name="student_detail_screen_12_10_2024">12/10/2024</string>
    <string name="student_detail_screen_blood">Blood</string>
    <string name="student_detail_screen_ab">AB</string>
    <string name="student_detail_screen_parent_details">Parent Details</string>
    <string name="student_detail_screen_father_s_name">Father\'s Name</string>
    <string name="student_detail_screen_mother_s_name">Mother\'s Name</string>
    <string name="student_detail_screen_contact">Contact</string>
    <string name="student_detail_screen_emergency_contact_no">Emergency Contact no</string>
    <string name="student_detail_screen_kumar">kumar</string>
    <string name="student_detail_screen_student_name">Rubiya</string>
    <string name="student_detail_screen_student_number">7373946480</string>
    <string name="student_detail_screen_em_number">123459876</string>
    <string name="student_detail_screen_residential_details">Residential Details</string>
    <string name="student_detail_screen_address_1">Address 1</string>
    <string name="student_detail_screen_address_2">Address 2</string>
    <string name="student_detail_screen_city">City</string>
    <string name="student_detail_screen_state">State</string>
    <string name="student_detail_screen_zip">Zip</string>
    <string name="student_detail_screen_address_name">Coimbatore</string>
    <string name="student_detail_screen_address_name2">----</string>
    <string name="student_detail_screen_city_name">Chennai</string>
    <string name="student_detail_screen_state_name">Tamil Nadu</string>
    <string name="student_detail_screen_pincode_name">641654</string>
    <string name="student_detail_screen_location_name">Location</string>
    <string name="map_activity_map_view">Map View</string>

</resources>