<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.IntroScreenActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/loginbacground"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/roboto"
        android:padding="10dp"
        android:text="@string/intro_screen_student_napp"
        android:lineSpacingExtra="10dp"
        android:textColor="#003B46"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/intro_screen_log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_signup"
        app:layout_constraintTop_toBottomOf="@id/tv_Login"

        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_create_new_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/roboto"
        app:textAllCaps="false"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/intro_screen_don_t_have_an_account"
        android:textColor="#07575B"
        android:textSize="16sp"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/roboto"
        app:textAllCaps="false"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:text="@string/intro_screen_signup"
        android:textColor="#042026"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/tv_create_new_acc"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>